--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <h1>About ping pong</h1>
         <p class="p1">Created by:</p>
         <p class="p2">joe</p>
+        <p class="p3">Github Username/URL</p>
+        <p class="p4"><a href="https://github.com/gichuki8888">gichuki8888</a></p>
       </div>
 
       <div class="col-md-4 yy">
@@ -33,7 +35,7 @@
 
           <p>Number divisible by 3 become "ping"</p>
           <p>Number divisible by 5 become "pong"</p>
-          <p>Number divisible by 3 and 5 become "pingpang"</p>
+          <p>Number divisible by 3 and 5 become "pingpong"</p>
         </li>
         <form id="xbox">
           <div class="form-group">
